// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewPatchSet.js Should display all Patch Template configuration 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-l-stack pf-m-gutter"
  >
    <div
      class="pf-v6-l-stack__item"
    >
      <div
        class="pf-v6-c-content"
        data-ouia-component-id="OUIA-Generated-Content-1"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        <h2
          class="pf-v6-c-content--h2"
          data-ouia-component-id="OUIA-Generated-Content-2"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Review 
        </h2>
      </div>
    </div>
    <div
      class="pf-v6-l-stack__item"
    >
      <div
        class="pf-v6-c-content"
        data-ouia-component-id="OUIA-Generated-Content-3"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
        style="margin-top: -15px;"
      >
        <p
          class="pf-v6-c-content--p"
          data-ouia-component-id="OUIA-Generated-Content-4"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Review the details of your template.
        </p>
      </div>
    </div>
    <div
      class="pf-v6-l-stack__item"
    >
      <div
        class="pf-v6-c-content"
        data-ouia-component-id="OUIA-Generated-Content-5"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        <h2
          class="pf-v6-c-content--h2 pf-v5-u-mt-md pf-v5-u-mb-sm"
          data-ouia-component-id="OUIA-Generated-Content-6"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Content
        </h2>
        <dl
          class="pf-v6-c-content--dl"
          data-ouia-component-id="OUIA-Generated-Content-7"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          <dt
            class="pf-v6-c-content--dt"
            data-ouia-component-id="OUIA-Generated-Content-8"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
            style="min-width: 220px;"
          >
            Red Hat advisories up to date
          </dt>
          <dd
            class="pf-v6-c-content--dd"
            data-ouia-component-id="OUIA-Generated-Content-9"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            14 June 2022
          </dd>
        </dl>
      </div>
    </div>
    <div
      class="pf-v6-l-stack__item"
    >
      <div
        class="pf-v6-c-content"
        data-ouia-component-id="OUIA-Generated-Content-10"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        <h2
          class="pf-v6-c-content--h2 pf-v5-u-mt-md pf-v5-u-mb-sm"
          data-ouia-component-id="OUIA-Generated-Content-11"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Details
        </h2>
        <dl
          class="pf-v6-c-content--dl"
          data-ouia-component-id="OUIA-Generated-Content-12"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          <dt
            class="pf-v6-c-content--dt"
            data-ouia-component-id="OUIA-Generated-Content-13"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
            style="min-width: 220px;"
          >
            Name
          </dt>
          <dd
            class="pf-v6-c-content--dd"
            data-ouia-component-id="OUIA-Generated-Content-14"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            test-name
          </dd>
          <dt
            class="pf-v6-c-content--dt"
            data-ouia-component-id="OUIA-Generated-Content-15"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
            style="min-width: 220px;"
          >
            Description
          </dt>
          <dd
            class="pf-v6-c-content--dd"
            data-ouia-component-id="OUIA-Generated-Content-16"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            test-description
          </dd>
        </dl>
      </div>
    </div>
    <div
      class="pf-v6-l-stack__item"
    >
      <div
        class="pf-v6-c-content"
        data-ouia-component-id="OUIA-Generated-Content-17"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        <h2
          class="pf-v6-c-content--h2 pf-v5-u-mt-md pf-v5-u-mb-sm"
          data-ouia-component-id="OUIA-Generated-Content-18"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Systems
        </h2>
        <dl
          class="pf-v6-c-content--dl"
          data-ouia-component-id="OUIA-Generated-Content-19"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          <dt
            class="pf-v6-c-content--dt"
            data-ouia-component-id="OUIA-Generated-Content-20"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
            style="min-width: 220px;"
          >
            Template applied to
          </dt>
          <dd
            class="pf-v6-c-content--dd"
            data-ouia-component-id="OUIA-Generated-Content-21"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
             2 systems 
          </dd>
        </dl>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReviewPatchSet.js Should display available configuration fields only 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-l-stack pf-m-gutter"
  >
    <div
      class="pf-v6-l-stack__item"
    >
      <div
        class="pf-v6-c-content"
        data-ouia-component-id="OUIA-Generated-Content-22"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        <h2
          class="pf-v6-c-content--h2"
          data-ouia-component-id="OUIA-Generated-Content-23"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Review 
        </h2>
      </div>
    </div>
    <div
      class="pf-v6-l-stack__item"
    >
      <div
        class="pf-v6-c-content"
        data-ouia-component-id="OUIA-Generated-Content-24"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
        style="margin-top: -15px;"
      >
        <p
          class="pf-v6-c-content--p"
          data-ouia-component-id="OUIA-Generated-Content-25"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Review the details of your template.
        </p>
      </div>
    </div>
    <div
      class="pf-v6-l-stack__item"
    >
      <div
        class="pf-v6-c-content"
        data-ouia-component-id="OUIA-Generated-Content-26"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        <h2
          class="pf-v6-c-content--h2 pf-v5-u-mt-md pf-v5-u-mb-sm"
          data-ouia-component-id="OUIA-Generated-Content-27"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Content
        </h2>
        <dl
          class="pf-v6-c-content--dl"
          data-ouia-component-id="OUIA-Generated-Content-28"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          <dt
            class="pf-v6-c-content--dt"
            data-ouia-component-id="OUIA-Generated-Content-29"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
            style="min-width: 220px;"
          >
            Red Hat advisories up to date
          </dt>
          <dd
            class="pf-v6-c-content--dd"
            data-ouia-component-id="OUIA-Generated-Content-30"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            N/A
          </dd>
        </dl>
      </div>
    </div>
    <div
      class="pf-v6-l-stack__item"
    >
      <div
        class="pf-v6-c-content"
        data-ouia-component-id="OUIA-Generated-Content-31"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        <h2
          class="pf-v6-c-content--h2 pf-v5-u-mt-md pf-v5-u-mb-sm"
          data-ouia-component-id="OUIA-Generated-Content-32"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Details
        </h2>
        <dl
          class="pf-v6-c-content--dl"
          data-ouia-component-id="OUIA-Generated-Content-33"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          <dt
            class="pf-v6-c-content--dt"
            data-ouia-component-id="OUIA-Generated-Content-34"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
            style="min-width: 220px;"
          >
            Name
          </dt>
          <dd
            class="pf-v6-c-content--dd"
            data-ouia-component-id="OUIA-Generated-Content-35"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            test-name
          </dd>
          <dt
            class="pf-v6-c-content--dt"
            data-ouia-component-id="OUIA-Generated-Content-36"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
            style="min-width: 220px;"
          >
            Description
          </dt>
          <dd
            class="pf-v6-c-content--dd"
            data-ouia-component-id="OUIA-Generated-Content-37"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            No description provided
          </dd>
        </dl>
      </div>
    </div>
    <div
      class="pf-v6-l-stack__item"
    >
      <div
        class="pf-v6-c-content"
        data-ouia-component-id="OUIA-Generated-Content-38"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        <h2
          class="pf-v6-c-content--h2 pf-v5-u-mt-md pf-v5-u-mb-sm"
          data-ouia-component-id="OUIA-Generated-Content-39"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Systems
        </h2>
        <dl
          class="pf-v6-c-content--dl"
          data-ouia-component-id="OUIA-Generated-Content-40"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          <dt
            class="pf-v6-c-content--dt"
            data-ouia-component-id="OUIA-Generated-Content-41"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
            style="min-width: 220px;"
          >
            Template applied to
          </dt>
          <dd
            class="pf-v6-c-content--dd"
            data-ouia-component-id="OUIA-Generated-Content-42"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
             2 systems 
          </dd>
        </dl>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
